<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">
    <TextView
        android:id="@+id/productName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/product_data" />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="46dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Product Name -->
        <EditText
            android:id="@+id/etProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_name" />

        <!-- Product Brand -->
        <EditText
            android:id="@+id/etProductBrand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/brand" />

        <!-- Product Category -->
        <EditText
            android:id="@+id/etProductCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category" />

        <!-- Product Price -->
        <EditText
            android:id="@+id/etProductPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:inputType="numberDecimal" />

        <!-- Product Description -->
        <EditText
            android:id="@+id/etProductDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/description"
            android:hint="@string/description"
            android:inputType="text"
            android:minHeight="100dp" />

        <!-- Select Image Button -->
        <Button
            android:id="@+id/btnSelectImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_700"
            android:text="@string/select_image" />

        <!-- Image Preview -->
        <ImageView
            android:id="@+id/ivProductImagePreview"
            android:contentDescription="@string/product_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:visibility="gone" />

        <!-- Submit Button -->
        <Button
            android:id="@+id/btnSubmitProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_product"
            android:backgroundTint="@color/teal_700"
            android:layout_marginTop="16dp" />
    </LinearLayout>
</ScrollView>
</LinearLayout>
